@@ -7,36 +7,24 @@ import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.stereotype.Service;
 import pl.thinkdata.b2bbase.common.error.InvalidRequestDataException;
+import pl.thinkdata.b2bbase.common.repository.CategoryRepository;
+import pl.thinkdata.b2bbase.common.repository.CompanyRepository;
 import pl.thinkdata.b2bbase.common.util.MessageGenerator;
 import pl.thinkdata.b2bbase.common.util.TokenUtil;
-import pl.thinkdata.b2bbase.company.dto.AdditionalDataToEdit;
-import pl.thinkdata.b2bbase.company.dto.CompanyDto;
-import pl.thinkdata.b2bbase.company.dto.CompanyResponse;
-import pl.thinkdata.b2bbase.company.dto.CompanyToEdit;
-import pl.thinkdata.b2bbase.company.dto.CompanyToEditDto;
+import pl.thinkdata.b2bbase.company.dto.*;
 import pl.thinkdata.b2bbase.company.mapper.CompanyMapper;
 import pl.thinkdata.b2bbase.company.model.Category;
 import pl.thinkdata.b2bbase.company.model.Company;
-import pl.thinkdata.b2bbase.company.model.SubscriptionOrder;
-import pl.thinkdata.b2bbase.company.model.enums.CompanyRoleEnum;
 import pl.thinkdata.b2bbase.company.model.UserRole2Company;
-import pl.thinkdata.b2bbase.common.repository.CategoryRepository;
-import pl.thinkdata.b2bbase.common.repository.CompanyRepository;
-import pl.thinkdata.b2bbase.company.model.enums.PaymentStatusEnum;
-import pl.thinkdata.b2bbase.company.model.enums.PaymentTypeEnum;
-import pl.thinkdata.b2bbase.company.model.enums.SubscriptionTypeEnum;
-import pl.thinkdata.b2bbase.company.repository.SubscriptionOrderRepository;
+import pl.thinkdata.b2bbase.company.model.enums.CompanyRoleEnum;
 import pl.thinkdata.b2bbase.company.repository.UserRole2CompanyRepository;
 import pl.thinkdata.b2bbase.company.validator.EditCompanyValidator;
 import pl.thinkdata.b2bbase.company.validator.RegistrationValidator;
 import pl.thinkdata.b2bbase.security.model.User;
 import pl.thinkdata.b2bbase.security.repository.UserRepository;
 
-import java.util.Calendar;
-import java.util.Date;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static pl.thinkdata.b2bbase.common.tool.ErrorDictionary.USER_FROM_GIVEN_TOKEN_NOT_FOUND;
 import static pl.thinkdata.b2bbase.common.tool.ErrorDictionary.YOU_CAN_ADD_ONLY_ONE_COMPANY;
@@ -57,7 +45,7 @@ public class CompanyService {
     private final UserDetailsService userDetailsService;
     private final UserRole2CompanyRepository userRole2CompanyRepository;
     private final CategoryRepository categoryRepository;
-    private final SubscriptionOrderRepository subscriptionOrderRepository;
+    private final SubscriptionOrderService subscriptionOrderService;
     List<Category> allCategory;
 
     public List<Company> getCompanies() {
@@ -86,7 +74,6 @@ public class CompanyService {
                 .user(user)
                 .build();
         userRole2CompanyRepository.save(userRole2Company);
-        subscriptionOrderRepository.save(createBasicSubscriptionOrder(newCompany.getId()));
         return mapToCompanyResponse(newCompany);
     }
 
@@ -141,8 +128,8 @@ public class CompanyService {
                 .forEach(cat -> companyInBase.removeCategory(cat.getId()));
 
         List<Long> categoryToCompanyList = companyInBase.getCategories().stream()
-                .map(cat -> cat.getId())
-                .collect(Collectors.toList());
+                .map(Category::getId)
+                .toList();
 
         additionalDataToEdit.getCategories().stream()
                 .filter(cat -> !categoryToCompanyList.contains(cat))
@@ -151,21 +138,6 @@ public class CompanyService {
         return mapToCompanyToEdit(companyRepository.saveAndFlush(companyInBase));
     }
 
-    private static SubscriptionOrder createBasicSubscriptionOrder(Long companyId) {
-        Date now = new Date();
-        Calendar nowPlusOneYear = Calendar.getInstance();
-        nowPlusOneYear.setTime(now);
-        nowPlusOneYear.add(Calendar.YEAR, 1);
-
-        return SubscriptionOrder.builder()
-                .companyId(companyId)
-                .startDate(now)
-                .endDate(nowPlusOneYear.getTime())
-                .subscriptionType(SubscriptionTypeEnum.BASIC)
-                .paymentStatus(PaymentStatusEnum.NOTPAID)
-                .paymentType(PaymentTypeEnum.BANK_TRANSFER)
-                .build();
-    }
     private Category getCategoryById(Long id) {
         if (allCategory == null) {
             allCategory = categoryRepository.findAll();
